@@ -74,3 +74,11 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:$camerax_version"
 }
+
+tasks.withType(JavaCompile).configureEach{
+options.fork = true
+options.forkOptions.jvmArgs +=[
+'--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED', 
+'--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED', 
+'--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
+}
